--- a/package.json
+++ b/package.json
@@ -4,8 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"node build.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/davidjumble/davidjumble.github.io.git"
+  },
+  "bugs": {
+    "url": "https://github.com/davidjumble/davidjumble.github.io/issues"
+  },
+  "homepage": "https://github.com/davidjumble/davidjumble.github.io#readme"
 }
